# exchain

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  settings.gradle.kts
applications/: README.md  commons.py
codeql/: find_data_flow.ql  qlpack.yml
demo/: 2022-10-03-09-34-28.csv  2022-10-03-09-39-24.csv  build.gradle  lastClass-sourceSink.txt  lastClass.txt
docs/: Foo.java  FooInstrumented.java  FooInstrumentedWithSwitch.java  exceptions.html  exceptions.md  meeting_notes.hdml  meeting_notes.md  nov-22.md  nov-8.md  out  running_doc.md  test.java
instrumentation/: build.gradle
native/: build.gradle
native/src/: CMakeLists.txt
native/src/cpp/: CMakeLists.txt  affected_result_processor.cc  configuration.cc  exception_processor.cc  monitor.cc  processor_base.cc  runtime.cc
native/src/headers/: affected_result_processor.hpp  configuration.hpp  constants.hpp  exception_processor.hpp  runtime.hpp  thread_pool.hpp  utils.hpp
native/src/main/cpp/: affected_result_processor.cc  configuration.cc  exception_monitro.cc  exception_processor.cc  monitor.cc  processor.cc  processor_base.cc  runtime.cc  runtime.h  utils.cc
native/src/main/headers/: affected_result_processor.hpp  configuration.hpp  constants.hpp  exception_processor.hpp  processor.hpp  processor_base.hpp  runtime.hpp  utils.hpp
phosphor/: build.gradle
phosphor-ext/: build.gradle
runtime/: build.gradle
scripts/: analyze_affected_var_results.py  analyze_exception_causaility.py  analyze_exceptions.py  analyze_functions.py  analyze_logs.py  crawler.py  jvms-6.html  process_failures.py  (+3 more)
(+251 files in other folders)
